cb_views.py파일추가

--- a/templates/todo_create.html
+++ b/templates/todo_create.html
@@ -1,6 +1,6 @@
 <!-- todo / todo_create.html -->
 
-{% extends 'base.html' %}
+{% extends 'myapp/base.html' %}
 {% block content %}
 <style>
 body {
