--- a/templates/todo_update.html
+++ b/templates/todo_update.html
@@ -1,7 +1,7 @@
 <!-- todo / todo_update.html -->
 
 
-{% extends 'todo/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <style>
 body {
