--- a/templates/todo_list.html
+++ b/templates/todo_list.html
@@ -44,13 +44,13 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Todo List</h1>
-        <ul>
-            {% for todo in data %}
-                <li><a href="{% url 'todo_info' todo.id %}">{{ todo.title }}</a></li>
-            {% endfor %}
-        </ul>
+    <div style="display: flex; justify-content: space-between">
+    {% if not request.user.is_staff %}
+        <h1>{{ request.user.username }}'s Todo List</h1>
+    {% else %}
+        <h1>All To Do List (By. Admin)</h1>
+    {% endif %}
+        <button class="create-button" onclick="location.href='{% url 'cbv_todo_create' %}">생성하기</button>
     </div>
 </body>
 </html>
